[MEM-API-002]ユーザ登録　リクエストIFに規約同意バージョンを追加
